# vasyaCourseWork

./: CMakeLists.txt  Point.h  lineSegment.cpp  lineSegment.h  main.cpp  polygon.cpp  polygon.h
